Changed some spacing issues

--- a/openlibrary/src/styles/App.scss
+++ b/openlibrary/src/styles/App.scss
@@ -10,7 +10,7 @@
 .SearchBar {
   margin-bottom: $spacing-04;
   margin-top: $spacing-07;
-  padding-left: $spacing-05;
+  margin-left: $spacing-04;
 }
 
 .SearchBar__input {
